# minigrep

./: Cargo.toml
src/: config.rs  lib.rs  main.rs
