[package]
name = "minigrep_essehemy"
version = "0.1.0"
authors = ["Mohammed Essehemy <mohammedessehemy@gmail.com>"]
edition = "2018"
description = "A sample program to search in files"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]